docs(material/chips): fix stacked chips example (#26774)
Fixes that the stacked chips example was using the wrong selector so the chips were too wide.

Fixes #26589.

(cherry picked from commit ead1f984f8f113eaa3bddfc51ba5c48ba2d568e6)

--- a/src/components-examples/material/chips/chips-stacked/chips-stacked-example.css
+++ b/src/components-examples/material/chips/chips-stacked/chips-stacked-example.css
@@ -1,3 +1,3 @@
-mat-chip {
+.mat-mdc-chip-set {
   max-width: 200px;
 }
